Set configurable height and width

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>giphy-search-component</title>
   </head>
   <body>
-    <app-giphy-search api-key=""></app-giphy-search>
+    <app-giphy-search
+      api-key=""
+      height="800px"
+      width="800px"
+    >
+    </app-giphy-search>
   </body>
 </html>
