Add Giphy API key to repository for npm start

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <app-giphy-search
-      api-key=""
+      api-key="NilCckKtrJq9lDxMICbF7SrJTAN2wABk"
       height="500px"
       width="800px"
     >
