--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <app-giphy-search
       api-key="NilCckKtrJq9lDxMICbF7SrJTAN2wABk"
-      height="500px"
-      width="800px"
+      embed-height="500px"
+      embed-width="800px"
     >
     </app-giphy-search>
 
